<resources>
    <string name="app_name">RoutesApp</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="button_login">INGRESAR</string>
    <string name="button_salir">SALIR</string>
    <string name="button_regresar">REGRESAR</string>
    <string name="txtv_welcome">Bienvenido ALEXANDER MORALES</string>
    <string name="btn_consultarrutas">CONSULTAR RUTAS</string>

    <string name="txt_detailedruta">RUTA 1</string>
    <string name="txt_detailedpoliza">POLIZA: 576543ASD543</string>
    <string name="txt_detailedtipovisita">TIPO DE VISITA: VERIFICACIÓN</string>


    <string name="btn_detailed_fot_bas">FOTOS BÁSICAS</string>
    <string name="btn_detailed_tip_res">TIPO DE RESULTADO</string>
    <string name="btn_detailed_res_fin">RESULTADO FINAL</string>
    <string name="btn_detailed_sus_sn">SUSPENSIÓN S/N</string>
    <string name="btn_detailed_fin_rut">FINALIZAR RUTA</string>


    <string name="btn_basic_fachada">FACHADA</string>
    <string name="btn_basic_medidor">MEDIDOR</string>
    <string name="btn_basic_hermet_i">HERMETICIDAD INICIAL</string>
    <string name="btn_basic_hermet_f">HERMETICIDAD FINAL</string>
    <string name="btn_basic_presion">PRESIÓN</string>
    <string name="btn_basic_monox_a">MONÓXIDO AMB.</string>
    <string name="btn_basic_monox_d">MONÓXIDO DILU.</string>
    <string name="btn_basic_ventilacion">VENTILACIÓN RE.</string>
    <string name="btn_basic_valvulas">VÁLVULAS</string>
    <string name="btn_basic_ganodom">GANODOM.</string>
    <string name="btn_basic_acta">ACTA</string>
    <string name="btn_basic_informe">INFORME DE VERIF.</string>


    <string name="btn_singleroute">RUTA1, POLIZA:12345, DIRECCION: Calle 127 # 7-55 apto 123 int 4 MUNICIPIO El Socorro SANTANDER, MEDIDOR: 865423ADSSD765, TIPO DE VISITA: VERIFICACION</string>
    <string name="btn_singleroute2">RUTA2, POLIZA:456, DIRECCION: cra 111 # 7-55 apto 123 int 4 MUNICIPIO EL META, MEDIDOR: 865423ADSSD765, TIPO DE VISITA: VERIFICACION</string>
    <string name="btn_singleroute3">RUTA3, POLIZA:98976, DIRECCION: Av 1a este # 7-55  MUNICIPIO Mesitas Cundinamarca, MEDIDOR: 865423ADSSD765, TIPO DE VISITA: VERIFICACION</string>
    <string name="btn_singleroute4">RUTA4, POLIZA:98765, DIRECCION: diagonal 34 # 7-55 apto 123 int 4 MUNICIPIO El Socorro SANTANDER, MEDIDOR: 865423ADSSD765, TIPO DE VISITA: VERIFICACION</string>
    <string name="btn_salirrutas"></string>


    <string name="txt_tipo_resultado">TIPO DE RESULTADO</string>
    <string name="rb_efectiva">EFECTIVA</string>
    <string name="rb_noefectiva">NO EFECTIVA</string>
    <string name="rb_condefecto">CON DEFECTO</string>
    <string name="rb_sindefecto">SIN DEFECTO</string>
    <string name="btn_ph_adhesivo">FOTO ADHESIVO</string>

    <string name="btn_tomarfoto">TOMAR FOTO</string>
    <string name="btn_galeria">GALERÍA</string>
    <string name="btn_guardarfoto">GUARDAR</string>




</resources>