<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PhotoBasicActivity">

    <Button
        android:id="@+id/btn_basic_informe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_informe"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_acta" />

    <Button
        android:id="@+id/btn_basic_acta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_acta"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_ganodom" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_salir"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_informe" />

    <Button
        android:id="@+id/btn_basic_ganodom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_ganodom"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_valvulas" />

    <Button
        android:id="@+id/btn_basic_monox_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_monox_d"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_monox_a" />

    <Button
        android:id="@+id/btn_basic_valvulas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_valvulas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_ventilacion" />

    <Button
        android:id="@+id/btn_basic_ventilacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_ventilacion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_monox_d" />

    <Button
        android:id="@+id/btn_basic_medidor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_medidor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_fachada" />

    <Button
        android:id="@+id/btn_basic_fachada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="To_Photo"
        android:text="@string/btn_basic_fachada"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_basic_monox_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_monox_a"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_presion" />

    <Button
        android:id="@+id/btn_basic_presion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_presion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_hermet_f" />

    <Button
        android:id="@+id/btn_basic_hermet_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_hermet_f"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_hermet_i" />

    <Button
        android:id="@+id/btn_basic_hermet_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_basic_hermet_i"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_basic_medidor" />
</androidx.constraintlayout.widget.ConstraintLayout>