<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ResultActivity">

    <TextView
        android:id="@+id/txt_tipo_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_tipo_resultado"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="283dp"
        android:layout_height="115dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tipo_resultado">

        <RadioButton
            android:id="@+id/rb_efectiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_efectiva" />

        <RadioButton
            android:id="@+id/rb_noefectiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_noefectiva" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="283dp"
        android:layout_height="112dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <RadioButton
            android:id="@+id/rb_condefecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_condefecto" />

        <RadioButton
            android:id="@+id/rb_sindefecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sindefecto" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_ph_adhesivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_ph_adhesivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <Button
        android:id="@+id/btn_ph_defecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ph_adhesivo" />
</androidx.constraintlayout.widget.ConstraintLayout>