<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AllRoutesActivity">

    <Button
        android:id="@+id/btn_singleroute"
        android:layout_width="362dp"
        android:layout_height="112dp"
        android:layout_marginTop="44dp"
        android:gravity="left"
        android:onClick="ToDetailed"
        android:text="@string/btn_singleroute"
        android:textColor="#1B1A1A"
        app:backgroundTint="#F6F2F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#090909"
        tools:text="RUTA1, POLIZA:12345, DIRECCION: Calle 127 # 7-55 apto 123 int 4 MUNICIPIO El Socorro SANTANDER, MEDIDOR: 865423ADSSD765, TIPO DE VISITA: VERIFICACION" />

    <Button
        android:id="@+id/btn_singleroute2"
        android:layout_width="362dp"
        android:layout_height="112dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/btn_singleroute2"
        android:textColor="#1B1A1A"
        app:backgroundTint="#F6F2F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_singleroute"
        tools:text="RUTA2, POLIZA:12345, DIRECCION: Calle 127 # 7-55 apto 123 int 4 MUNICIPIO El Socorro SANTANDER, MEDIDOR: 865423ADSSD765, TIPO DE VISITA: VERIFICACION" />

    <Button
        android:id="@+id/btn_singleroute3"
        android:layout_width="362dp"
        android:layout_height="112dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/btn_singleroute3"
        android:textColor="#1B1A1A"
        app:backgroundTint="#F6F2F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_singleroute2"
        tools:text="RUTA3, POLIZA:12345, DIRECCION: Calle 127 # 7-55 apto 123 int 4 MUNICIPIO El Socorro SANTANDER, MEDIDOR: 865423ADSSD765, TIPO DE VISITA: VERIFICACION" />

    <Button
        android:id="@+id/btn_singleroute4"
        android:layout_width="362dp"
        android:layout_height="112dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/btn_singleroute4"
        android:textColor="#1B1A1A"
        app:backgroundTint="#F6F2F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_singleroute3"
        tools:text="RUTA4, POLIZA:12345, DIRECCION: Calle 127 # 7-55 apto 123 int 4 MUNICIPIO El Socorro SANTANDER, MEDIDOR: 865423ADSSD765, TIPO DE VISITA: VERIFICACION" />

    <Button
        android:id="@+id/btn_salirrutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/button_regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_singleroute4" />
</androidx.constraintlayout.widget.ConstraintLayout>